<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_product">Product</string>
    <string name="label_store">Store</string>
    <string name="label_report">Report</string>
    <string name="label_profile">Profile</string>
    <string name="label_add_store">Add Store</string>
    <string name="label_register">Register</string>
    <string name="label_login">Login</string>
    <string name="label_employee">Employee</string>
    <string name="label_add_product">Add Product</string>
    <string name="label_category">Add Category</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_stock">Initial stock</string>
    <string name="label_min_stock">Minimal stock</string>
    <string name="label_add">Add</string>
    <string name="label_cart">Cart</string>

    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirmation_password">Confirmation Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_already_have_an_account">Already have an account? Sign in here</string>


    <string name="default_hint">Default hint</string>
    <string name="product">Product</string>
    <string name="component_one">Custom Component 1</string>
    <string name="component_two">Custom Component 2</string>
    <string name="component_three">Custom Component 3</string>
    <string name="hint_text">Type something for</string>

    <string name="err_msg_field_empty">Isian ini tidak boleh kosong</string>
    <string name="err_msg_field_empty_">This field cannot be empty</string>
    <string name="label_store_number">Store\nNumber</string>
    <string name="label_employee_number">Employee\nNumber</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_display_price">Display Price</string>
    <string name="hint_actual_price">Actual Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_min_quantity">Min Quantity</string>
    <string name="save">SAVE</string>
    <string name="hint_category_name">Category Name</string>
    <string name="cancel">Cancel</string>
    <string name="enter_quantity">Enter Quantity</string>



</resources>
