<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/fragmentLogin">

    <fragment
        android:id="@+id/fragmentDashboard"
        android:name="co.id.billyon.ui.owner.DashboardFragment"
        android:label="@string/label_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/fragmentReport"
        android:name="co.id.billyon.ui.owner.OwnerSalesReport"
        android:label="@string/label_report"
        tools:layout="@layout/fragment_owner_sales_report" />

    <fragment
        android:id="@+id/fragmentProfile"
        android:name="co.id.billyon.ui.owner.OwnerProfile"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_owner_profile" />
    <fragment
        android:id="@+id/fragmentAddStore"
        android:name="co.id.billyon.ui.owner.AddStoreFragment"
        android:label="@string/label_add_store"
        tools:layout="@layout/fragment_add_store">
        <argument
            android:name="store_id"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/fragmentRegister"
        android:name="co.id.billyon.ui.other.register.RegisterFragment"
        android:label="@string/label_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/actionLaunchOwnerDashboard"
            app:destination="@id/fragmentDashboard"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/fragmentRegister" />
        <action
            android:id="@+id/actionLaunchLogin"
            app:destination="@id/fragmentLogin"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragmentLogin"
        android:name="co.id.billyon.ui.other.login.LoginFragment"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/actionLaunchRegister"
            app:destination="@id/fragmentRegister"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/actionLaunchOwnerDashboard"
            app:destination="@id/fragmentDashboard"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/actionLaunchCashierDashboard"
            app:destination="@id/fragmentCashierDashboard"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/fragmentAddEmployee"
        android:name="co.id.billyon.ui.owner.EmployeeFragment"
        android:label="@string/label_employee"
        tools:layout="@layout/fragment_employee" />
    <fragment
        android:id="@+id/fragmentAddCategory"
        android:name="co.id.billyon.ui.cashier.addcategory.AddCategoryFragment"
        android:label="@string/label_category"
        tools:layout="@layout/fragment_add_category">
        <argument
            android:name="store_id"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/fragmentCashierDashboard"
        android:name="co.id.billyon.ui.cashier.dashboard.DashboardFragment"
        android:label="@string/label_dashboard"
        tools:layout="@layout/fragment_cashier_dashboard">
        <action
            android:id="@+id/actionLaunchProductList"
            app:destination="@id/fragmentProductList"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/actionLaunchAddCategory"
            app:destination="@id/fragmentAddCategory"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
        <argument
            android:name="storeId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/fragmentAddProduct"
        android:name="co.id.billyon.ui.cashier.addproduct.AddProductFragment"
        android:label="@string/label_add_product"
        tools:layout="@layout/fragment_add_product" >
        <argument
            android:name="categoryId"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="storeId"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="categoryName"
            android:defaultValue="@string/product"
            app:argType="string"/>
        <action
            android:id="@+id/actionLaunchProductList"
            app:destination="@id/fragmentProductList"
            app:popUpTo="@+id/fragmentProductList" />
    </fragment>

    <fragment
        android:id="@+id/fragmentProductList"
        android:name="co.id.billyon.ui.cashier.product.ProductListFragment"
        android:label="List product"
        tools:layout="@layout/fragment_product_list" >
        <argument
            android:name="categoryId"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="storeId"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="categoryName"
            android:defaultValue="@string/product"
            app:argType="string" />
        <action
            android:id="@+id/actionLaunchAddProduct"
            app:destination="@id/fragmentAddProduct" />
        <action
            android:id="@+id/actionLaunchCartFragment"
            app:destination="@id/fragmentCart"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@+id/fragmentDashboard" />

    </fragment>
    <fragment
        android:id="@+id/fragmentCart"
        android:name="co.id.billyon.ui.cashier.cart.CartFragment"
        android:label="@string/label_cart"
        tools:layout="@layout/fragment_cart" >
        <argument
            android:name="cart_id"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

</navigation>