<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="vm"
            type="co.id.billyon.ui.cashier.addproduct.AddProductViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.cashier.addproduct.AddProductFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/grey_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            error="@{vm.errorProductName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProductName"
                android:layout_width="match_parent"
                android:text="@={vm.productName}"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvDisplayPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            error="@{vm.errorDisplayPrice}"
            app:layout_constraintEnd_toEndOf="@+id/tvProductName"
            app:layout_constraintStart_toStartOf="@+id/tvProductName"
            app:layout_constraintTop_toBottomOf="@+id/tvProductName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDisplayPrice"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:text="@={vm.displayPrice}"
                addThousandSeparator="@{0}"
                android:layout_height="wrap_content"
                android:hint="@string/hint_display_price" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvActualPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            error="@{vm.errorActualPrice}"
            app:layout_constraintEnd_toEndOf="@+id/tvDisplayPrice"
            app:layout_constraintStart_toStartOf="@+id/tvDisplayPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvDisplayPrice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etActualPrice"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:text="@={vm.actualPrice}"
                addThousandSeparator="@{0}"
                android:layout_height="wrap_content"
                android:hint="@string/hint_actual_price" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            error="@{vm.errorInitialStock}"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tvActualPrice"
            app:layout_constraintStart_toStartOf="@+id/tvActualPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvActualPrice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etInitialStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@={vm.initialStock}"
                android:hint="@string/label_stock" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvMinQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            error="@{vm.errorMinStock}"
            app:layout_constraintEnd_toEndOf="@+id/tvQuantity"
            app:layout_constraintStart_toStartOf="@+id/tvQuantity"
            app:layout_constraintTop_toBottomOf="@+id/tvQuantity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMinStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@={vm.minStock}"
                android:hint="@string/label_min_stock" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


